--- a/logstash/conf.d/tcp-udp_log.conf
+++ b/logstash/conf.d/tcp-udp_log.conf
@@ -1,14 +1,29 @@
 input {
   tcp {
-    port => 9988
+    port => 9998
+    type => syslog
   }
   udp {
-    port => 9989
+    port => 9999
+    type => syslog
   }
 }
 
+# filter {
+#   if [type] == "syslog" {
+#     grok {
+#       match => { "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:syslog_message}" }
+#       add_field => [ "received_at", "%{@timestamp}" ]
+#       add_field => [ "received_from", "%{host}" ]
+#     }
+#     syslog_pri { }
+#     date {
+#       match => [ "syslog_timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
+#     }
+#   }
+# }
+
 output {
-  elasticsearch {
-    embedded => true
-  }
+  elasticsearch { host => localhost }
+  stdout { codec => rubydebug }
 }
