--- a/logstash/conf.d/tcp-udp_log.conf
+++ b/logstash/conf.d/tcp-udp_log.conf
@@ -1,11 +1,8 @@
 input {
   tcp {
+    type => "rails"
     port => 9998
-    type => syslog
-  }
-  udp {
-    port => 9999
-    type => syslog
+    codec => json_lines
   }
 }
 
@@ -24,6 +21,9 @@ input {
 # }
 
 output {
-  elasticsearch { host => localhost }
-  stdout { codec => rubydebug }
+  elasticsearch {
+    host => localhost
+    protocol => "http"
+  }
+  file { path => "/var/log/logstash/tcpudpout.log" }
 }
