--- a/logstash/conf.d/tcp-udp_log.conf
+++ b/logstash/conf.d/tcp-udp_log.conf
@@ -4,6 +4,11 @@ input {
     port => 9998
     codec => json_lines
   }
+  udp {
+    type => "rails"
+    port => 9998
+    codec => json_lines
+  }
 }
 
 # filter {
