--- a/coreos/elk.1.service
+++ b/coreos/elk.1.service
@@ -7,7 +7,7 @@ Requires=docker.service
 Restart=always
 RestartSec=10s
 ExecStartPre=/usr/bin/docker ps -a -q | xargs docker rm
-ExecStart=/usr/bin/docker run -rm -name elk_1 -v ./logstash/conf.d/:/etc/logstash/conf.d/   -p 5000:5000 -p 5601:5601 -p 9200:9200 -p 9292:9292 -p 9998:9998 -p 9999:9999 
+ExecStart=/usr/bin/docker run --rm --name elk_1 -v ./logstash/conf.d/:/etc/logstash/conf.d/ -p 5000:5000 -p 5601:5601 -p 9200:9200 -p 9292:9292 -p 9998:9998 -p 9999:9999
 ExecStartPost=/usr/bin/docker ps -a -q | xargs docker rm
 ExecStop=/usr/bin/docker kill elk_1
 ExecStopPost=/usr/bin/docker ps -a -q | xargs docker rm
